Update gap analysis with the dependency modernization and verification results
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BDyrKmKdsCvN229WkjBfe8